--- a/css/main.scss
+++ b/css/main.scss
@@ -17,6 +17,11 @@ $text-subhead-size: 48px;
 $text-subsubhead-size: 36px;
 $text-body-size: 24px;
 
+// Layout settings
+$nav-padding: 20px;
+$nav-spacing: 50px;
+$content-padding: 100px;
+
 // Grid settings.
 $max-width: 1140px;
 $min-width: 755px;
